# aijurisdictionagents

./: .env.example  .gitignore  AGENTS.md  LIFECYCLE_AUTOMATION.md  README.md  aijurisdictionagents.code-workspace  environment.yml  pyproject.toml
.github/: automation.yml  copilot-instructions.md
api/aijuristiction-api/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/aijuristiction-api/app/: __init__.py  main.py
api/aijuristiction-api/app/chat/: api.py  models.py  repository.py
api/aijuristiction-api/e2e-playwright/: package.json  playwright.config.ts
api/aijuristiction-api/e2e-playwright/tests/: health.spec.ts
api/aijuristiction-api/tests/: test_chat.py  test_health.py
automation/: cli.py  github.py  models.py
corporate-web/: README.md  index.html  styles.css
data/: sample_case.txt  sample_case1.txt
docs/: API_ARCHITECTURE_RFC.md  ARCHITECTURE.md  AUTOMATION.md  AUTOMATION_POLLING.md  CORPORATE_WEB.md  FRONTEND_DEMO.md  RUN_DISCUSSION_TYPES.md  SEQUENCE.md  TASK_7_API_PROJECT_BREAKDOWN.md  WORKSPACE.md  frontend_design.md
examples/: automation_demo.py  automation_tasks.json  conda_workspace_smoke.py  frontend_demo.ps1  lifecycle_automation_demo.py  minimal_demo.py  project_in_review_demo.py  project_poll_demo.py  project_poll_fixture.json  project_pr_fixture.json
frontend_design/: README.md  eslint.config.mjs  index.html  package-lock.json  package.json
scripts/: lifecycle_agent_run.py  project_in_review.py  project_poll.py  project_status.ps1
tests/: run_app.ps1  testAF.py  test_agents.py  test_automation_tasks.py  test_case_store.py  test_documents.py  test_orchestrator.py  (+4 more)
(+114 files in other folders)
